Update and rename travis.yml to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ env:
     - ROSINSTALL_FILE=$CI_SOURCE_PATH/dependencies.rosinstall
     - CATKIN_OPTIONS=$CI_SOURCE_PATH/catkin.options
     - ROS_PARALLEL_JOBS='-j8 -l6'
+    - CUDA='8.0.61-1'
 
 ################################################################################
 
