--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,8 +50,7 @@ if(CUDA_FOUND)
     target_link_libraries(particle_filter_gpu ${CUDA_LIBRARIES} ${catkin_LIBRARIES} )
     target_link_libraries(main_gpu particle_filter_gpu)
 
-    message("$ENV{TRAVIS}")
-    if (DEFINED $ENV{TRAVIS})
+    if ($ENV{TRAVIS})
         message("On Travis, not building the cuda unit tests")
     else()
         message("Not on Travis, building the cuda unit tests")
