Finished writing a GPU example of the planar object particle filter.   -Can support particle counts of more than 100,000.   -Includes optimized scan algorithm.   -Need to add GPU optmized functions as necessary.   -Start deploying to other lab projects and expand.

--- a/rosdoc.yml
+++ b/rosdoc.yml
@@ -4,3 +4,4 @@
    name: C++ API
    output_dir: c++
    file_patterns: '*.c *.cpp *.h *.cc *.hh *.dox'
+   exclude_patterns: '*/cmake-build-debug/*'
