--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ before_install:
   - travis_retry sudo apt-get update -qq
   - export CUDA_APT=${CUDA:0:3}
   - export CUDA_APT=${CUDA_APT/./-}
-  - travis_retry sudo apt-get install -y cuda-drivers cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT} cuda-cublas-dev-${CUDA_APT}
+  - travis_retry sudo apt-get install -y cuda-drivers cuda-core-${CUDA_APT} cuda-cudart-dev-${CUDA_APT} cuda-cufft-dev-${CUDA_APT} cuda-cublas-dev-${CUDA_APT} >/dev/null
   - travis_retry sudo apt-get clean
   - export CUDA_HOME=/usr/local/cuda-${CUDA:0:3}
   - export LD_LIBRARY_PATH=${CUDA_HOME}/nvvm/lib64:${LD_LIBRARY_PATH}
