--- a/.travis.yml
+++ b/.travis.yml
@@ -141,6 +141,7 @@ script:
   - source /opt/ros/$ROS_DISTRO/setup.bash
   - cd ~/catkin_ws
   #- catkin_make  $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
+  - catkin_make || true
   - catkin_make
   # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
